Hosting & Logic Check
Fixed problems related to Adding Funds.
Fixed crashing problems when stations weren't selected.
Hosted the application on AWS Beanstalk & Added SSL.

TODO
- Better Error Handling
- Code Refactoring
- Implement JWT